# aikot

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
script/: bash-completion.bash
src/: browser.rs  clipboard.rs  cmd.rs  env.rs  err.rs  gpg.rs  io.rs  lib.rs  main.rs  password.rs  rand.rs  tempfile.rs  template.rs
src/clipboard/: macos.rs  mod.rs  windows.rs  x11.rs
src/cmd/: add.rs  browse.rs  clip.rs  completion.rs  edit.rs  init.rs  list.rs  mod.rs  pwgen.rs  show.rs
src/io/: common.rs  mod.rs  unix.rs  windows.rs
src/tempfile/: common.rs  mod.rs  unix.rs  windows.rs
