[package]
name = "aikot"
version = "0.1.0"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "^0.1.3"
failure = "^0.1.8"
rand = "^0.7.3"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.74"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11-clipboard = "^0.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
clipboard_macos = "^0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.9", features = ["errhandlingapi", "handleapi", "heapapi", "securitybaseapi", "winbase"] }
winrt = "^0.7.1"
