[package]
name = "aikot"
version = "0.1.0"
authors = ["Iku Iwasa <iku.iwasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
rand = "0.8.3"
anyhow = "1.0.32"
thiserror = "1.0.20"
gtmpl = "0.7.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
arboard = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
clipboard_macos = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.37.0", features = [
    "ApplicationModel_DataTransfer",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]}
